feat: favicon.ico 추가 및 main 템플릿에 링크 설정
favicon.ico 파일을 추가하고 main 템플릿에 <link> 태그를 추가하여 브라우저 탭에 아이콘이 표시되도록 설정.

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pharmacy Recommendation</title>
-
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- 부트스트랩 CSS 추가 -->
     <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
 </head>
